--- a/src/components/styles/board.css
+++ b/src/components/styles/board.css
@@ -37,7 +37,7 @@
   background-color: #f8f8f8;
   border-radius: 10px;
   padding: 10px;
-  max-height: 600px;
+  max-height: 70vh;
   overflow-y: scroll;
 }
 .listHeader {
